feat(web,backend): avatar en partida, vista rápida de perfil, desplegable de usuario, rivales recientes; fix(web): volver a la partida desde cualquier pantalla, bloquear nombre/avatar en partida, porcentaje de victorias